add local identifier from test

--- a/serenity.properties
+++ b/serenity.properties
@@ -27,7 +27,7 @@ environment.single.browser=chrome
 environment.local.name=local_test
 environment.local.browser=chrome
 environment.local.browserstack.local=true
-
+environment.local.browserstack.localIdentifier=randomstring123456
 
 environment.parallel_1.name=parallel_test
 environment.parallel_1.browser=chrome
